tests/error/overload_errors/higher_order.err
Error: Higher-order overloaded function (at $FILE:19:28)
   | 
17 | @guppy
18 | def main() -> None:
19 |     f: Function[[], None] = overloaded
   |                             ^^^^^^^^^^ Overloaded function `overloaded` may not be used as a
   |                                        higher-order value

Guppy compilation failed due to 1 previous error
